--- a/app/src/main/res/layout/activity_categorized_list.xml
+++ b/app/src/main/res/layout/activity_categorized_list.xml
@@ -6,11 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".CategorizedList">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="16dp"
-        android:text="Apple"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="129dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/foodList"
+        android:layout_width="395dp"
+        android:layout_height="wrap_content"
+        app:layout_constrainedHeight="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
