--- a/app/src/main/res/layout/activity_categorized_list.xml
+++ b/app/src/main/res/layout/activity_categorized_list.xml
@@ -9,9 +9,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/foodList"
-        android:layout_width="395dp"
-        android:layout_height="wrap_content"
-        app:layout_constrainedHeight="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -20,7 +19,8 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/my_text_view"
