--- a/app/src/main/res/layout/my_card_view.xml
+++ b/app/src/main/res/layout/my_card_view.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:fillViewport="true">
 
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_margin="5dp"
         android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="301dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0"
+            android:alpha="0"
+            android:text="Button" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,28 +28,43 @@
             <!--
             items for a single row of RecyclerView
             -->
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/cow"
+                tools:srcCompat="@drawable/cow" />
+
             <TextView
                 android:id="@+id/name"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:text="Name"
                 android:textColor="#000"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
                 android:textSize="15sp" />
 
 
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="20dp"
+                android:layout_height="17dp"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/cow"
+                android:foregroundGravity="center"
+                tools:srcCompat="@drawable/cow" />
+
             <TextView
-                android:id="@+id/mobileNo"
-                android:layout_width="wrap_content"
+                android:id="@+id/time"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="1 Week"
                 android:textColor="#000"
-                android:textSize="15sp" />
+                android:textSize="12sp" />
+
             <ToggleButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
