--- a/app/src/main/res/layout/activity_info_screen.xml
+++ b/app/src/main/res/layout/activity_info_screen.xml
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/storageImage"
         android:layout_width="312dp"
         android:layout_height="416dp"
         android:layout_marginStart="8dp"
@@ -79,7 +79,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/foodPicture"
+        android:id="@+id/foodImage"
         android:layout_width="50dp"
         android:layout_height="49dp"
         android:layout_marginStart="8dp"
