Earth is no longer an abomination
Milk n egg got a separation. Are now milk and egg.

--- a/app/src/main/res/drawable/earth.xml
+++ b/app/src/main/res/drawable/earth.xml
@@ -1,8 +1,8 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
-    android:viewportWidth="1000"
-    android:viewportHeight="1000"
-    android:width="1000dp"
-    android:height="1000dp">
+    android:viewportWidth="1016"
+    android:viewportHeight="1006"
+    android:width="1016dp"
+    android:height="1006dp">
     <path
         android:pathData="M1000 500A500 500 0 0 1 0 500A500 500 0 0 1 1000 500Z">
         <aapt:attr
@@ -14,32 +14,26 @@
                 android:gradientRadius="500"
                 android:tileMode="clamp">
                 <item
-                    android:color="#0000FF"
+                    android:color="#0051FF"
                     android:offset="0" />
                 <item
-                    android:color="#0002FF"
-                    android:offset="0.3282" />
+                    android:color="#0053FF"
+                    android:offset="0.38186" />
                 <item
-                    android:color="#000AFF"
-                    android:offset="0.4785" />
+                    android:color="#005BFF"
+                    android:offset="0.55667" />
                 <item
-                    android:color="#0016FF"
-                    android:offset="0.5925" />
+                    android:color="#0067FF"
+                    android:offset="0.6893" />
                 <item
-                    android:color="#0028FF"
-                    android:offset="0.6883" />
+                    android:color="#0079FF"
+                    android:offset="0.80069" />
                 <item
-                    android:color="#0040FF"
-                    android:offset="0.7726" />
+                    android:color="#0091FF"
+                    android:offset="0.89866" />
                 <item
-                    android:color="#005DFF"
-                    android:offset="0.8488" />
-                <item
-                    android:color="#0080FF"
-                    android:offset="0.919" />
-                <item
-                    android:color="#00A7FF"
-                    android:offset="0.9826" />
+                    android:color="#00AEFF"
+                    android:offset="0.9859" />
                 <item
                     android:color="#00B3FF"
                     android:offset="1" />
@@ -48,9 +42,9 @@
     </path>
     <group>
         <clip-path
-            android:pathData="M942 213C723 -77 394.61 -99.68 412 -49c13.64 39.74 -3.37 67.3 -14 129c-3.82 22.19 -15.3 88.82 -3 151c17.18 86.82 81.07 166.75 156 209c64.14 36.17 88.5 17.74 124 55c46.65 48.97 45.25 123.48 44 190c-2.24 119.05 -39.83 184.95 -10 208c3.59 2.78 21.27 15.06 77 -9c106.07 -45.79 166.35 -143.94 194 -199c8.68 -17.28 64.06 70.04 34 99c-273 263 -522.2 319.13 -686 156c-39.68 -39.52 -48.99 -124.59 -54 -166C247 551 126 667.49 73 641c-272.73 -136.29 -101.75 475.35 233 466C1189.17 1082.34 1190.89 542.58 942 213z" />
+            android:pathData="M942 213C723 -77 394.60626 -99.6811 412 -49c13.63721 39.7355 -3.37119 67.30265 -14 129 -3.82324 22.1928 -15.3017 88.82207 -3 151 17.17737 86.82166 81.07391 166.75012 156 209 64.13666 36.16586 88.5014 17.73926 124 55 46.64984 48.96552 45.24976 123.483 44 190 -2.23669 119.04669 -39.82709 184.95361 -10 208 3.59229 2.77563 21.27014 15.05743 77 -9 106.06921 -45.7879 166.35175 -143.94452 194 -199 8.67881 -17.282 64.06 70.04113 34 99 -273 263 -522.20317 319.13368 -686 156 -39.68037 -39.51972 -48.98635 -124.591 -54 -166C247 551 126.00374 667.48752 73 641c-272.72611 -136.28923 -101.75251 475.34736 233 466C1189.16524 1082.33919 1190.8904 542.5809 942 213Z" />
         <path
-            android:pathData="M1000 500c0 276.14 -223.86 500 -500 500S0 776.14 0 500S223.86 0 500 0c134.15 0 255.97 52.83 345.77 138.83C940.81 229.85 1000 358.01 1000 500z">
+            android:pathData="M1000 500c0 276.14237 -223.85763 500 -500 500S0 776.14237 0 500 223.85763 0 500 0A498.31514 498.31514 0 0 1 845.7682 138.82817C940.81455 229.84558 1000 358.011 1000 500Z">
             <aapt:attr
                 name="android:fillColor">
                 <gradient
@@ -60,26 +54,61 @@
                     android:gradientRadius="500"
                     android:tileMode="clamp">
                     <item
-                        android:color="#009245"
+                        android:color="#00C345"
                         android:offset="0" />
                     <item
-                        android:color="#009444"
-                        android:offset="0.442" />
+                        android:color="#00C543"
+                        android:offset="0.48455" />
                     <item
-                        android:color="#009B40"
-                        android:offset="0.6012" />
+                        android:color="#00CB3C"
+                        android:offset="0.65908" />
                     <item
-                        android:color="#00A638"
-                        android:offset="0.7147" />
+                        android:color="#00D531"
+                        android:offset="0.78346" />
                     <item
-                        android:color="#00B72D"
-                        android:offset="0.8065" />
+                        android:color="#00E320"
+                        android:offset="0.88402" />
                     <item
-                        android:color="#00CD1F"
-                        android:offset="0.885" />
+                        android:color="#00F60A"
+                        android:offset="0.9692" />
                     <item
-                        android:color="#00E80F"
-                        android:offset="0.9534" />
+                        android:color="#00FF00"
+                        android:offset="1" />
+                </gradient>
+            </aapt:attr>
+        </path>
+    </group>
+    <group>
+        <clip-path
+            android:pathData="M958 219C739 -71 410.60626 -93.6811 428 -43c13.63721 39.7355 -3.37119 67.30265 -14 129 -3.82324 22.1928 -15.3017 88.82207 -3 151 17.17737 86.82166 81.07391 166.75012 156 209 64.13666 36.16586 88.5014 17.73926 124 55 46.64984 48.96552 45.24976 123.483 44 190 -2.23669 119.04669 -39.82709 184.95361 -10 208 3.59229 2.77563 21.27014 15.05743 77 -9 106.06921 -45.7879 166.35175 -143.94452 194 -199 8.67881 -17.282 64.06 70.04113 34 99 -273 263 -522.20317 319.13368 -686 156 -39.68037 -39.51972 -48.98635 -124.591 -54 -166C263 557 142.00374 673.48752 89 647c-272.72611 -136.28923 -101.75251 475.34736 233 466C1205.16524 1088.33919 1206.8904 548.5809 958 219Z" />
+        <path
+            android:pathData="M1016 506c0 276.14237 -223.85763 500 -500 500S16 782.14237 16 506 239.85763 6 516 6A498.31514 498.31514 0 0 1 861.7682 144.82817C956.81455 235.84558 1016 364.011 1016 506Z">
+            <aapt:attr
+                name="android:fillColor">
+                <gradient
+                    android:type="radial"
+                    android:centerX="516"
+                    android:centerY="506"
+                    android:gradientRadius="500"
+                    android:tileMode="clamp">
+                    <item
+                        android:color="#00C345"
+                        android:offset="0" />
+                    <item
+                        android:color="#00C543"
+                        android:offset="0.48455" />
+                    <item
+                        android:color="#00CB3C"
+                        android:offset="0.65908" />
+                    <item
+                        android:color="#00D531"
+                        android:offset="0.78346" />
+                    <item
+                        android:color="#00E320"
+                        android:offset="0.88402" />
+                    <item
+                        android:color="#00F60A"
+                        android:offset="0.9692" />
                     <item
                         android:color="#00FF00"
                         android:offset="1" />
@@ -88,49 +117,24 @@
         </path>
     </group>
     <path
-        android:pathData="M713.86 180.63c-14.78 76.03 -99.88 123.46 -190.07 105.92c-90.2 -17.53 -151.33 -93.38 -136.55 -169.41S487.12 -6.32 577.31 11.21S728.64 104.59 713.86 180.63z">
-        <aapt:attr
-            name="android:fillColor">
-            <gradient
-                android:type="radial"
-                android:centerX="550.5404"
-                android:centerY="148.865"
-                android:gradientRadius="137.4326"
-                android:tileMode="clamp">
-                <item
-                    android:color="#33FFFFFF"
-                    android:offset="0" />
-                <item
-                    android:color="#00FFFFFF"
-                    android:offset="1" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:pathData="M639.83 160.91A28 28 0 0 1 583.83 160.91A28 28 0 0 1 639.83 160.91Z"
+        android:pathData="M639.8298 160.9137A28 28 0 0 1 583.8298 160.9137A28 28 0 0 1 639.8298 160.9137Z"
         android:fillColor="#000000" />
     <path
-        android:pathData="M517.13 137.06A28 28 0 0 1 461.13 137.06A28 28 0 0 1 517.13 137.06Z"
+        android:pathData="M517.1264 137.0626A28 28 0 0 1 461.1264 137.0626A28 28 0 0 1 517.1264 137.0626Z"
         android:fillColor="#000000" />
     <path
-        android:pathData="M638.83 160.91A27 27 0 0 1 584.83 160.91A27 27 0 0 1 638.83 160.91Z"
+        android:pathData="M524.49316 182.0115c-9.15542 1.19477 -1.964 18.59206 13.13934 21.52786 15.50082 3.01305 29.69041 -8.315 22.72022 -12.90757 -6.216 -4.09558 -8.2135 8.30285 -21.727 5.67608C527.09943 194.06739 533.38056 180.85172 524.49316 182.0115Z"
+        android:fillColor="#000000" />
+    <path
+        android:pathData="M596.20605 145.69482c-1.46875 0 -2.51953 -0.42285 -2.88281 -1.15966 -0.376 -0.76319 -0.03906 -1.895 0.92578 -3.1045a15.45707 15.45707 0 0 1 10.54493 -5.12548c1.46875 0 2.51953 0.42285 2.88281 1.15966 0.376 0.76319 0.03906 1.895 -0.92578 3.1045a15.457 15.457 0 0 1 -10.54493 5.12548Z"
         android:fillColor="#FFFFFF" />
     <path
-        android:pathData="M516.13 137.06A27 27 0 0 1 462.13 137.06A27 27 0 0 1 516.13 137.06Z"
+        android:pathData="M604.79431 136.80519h-0.00006c1.25226 0 2.16205 0.32909 2.43359 0.8803 0.2829 0.5742 -0.04162 1.53572 -0.868 2.572a14.96845 14.96845 0 0 1 -10.15344 4.93729c-1.25269 0 -2.16266 -0.32909 -2.4342 -0.8803 -0.2829 -0.5742 0.04162 -1.53572 0.868 -2.572a14.96815 14.96815 0 0 1 10.15411 -4.93729m-0.00067 -1a14.33669 14.33669 0 0 0 -6.0614 1.60663c-4.21112 2.07463 -6.83344 5.36293 -5.85712 7.34463 0.47351 0.96122 1.70618 1.43836 3.33124 1.43836a14.33491 14.33491 0 0 0 6.0614 -1.60663c4.21112 -2.07463 6.83344 -5.36293 5.85712 -7.34463 -0.47351 -0.96122 -1.70618 -1.43848 -3.33124 -1.43836Z"
+        android:fillColor="#000000" />
+    <path
+        android:pathData="M475.20605 121.69482c-1.46875 0 -2.51953 -0.42285 -2.88281 -1.15966 -0.376 -0.76319 -0.03906 -1.895 0.92578 -3.1045a15.45707 15.45707 0 0 1 10.54493 -5.12548c1.46875 0 2.51953 0.42285 2.88281 1.15966 0.376 0.76319 0.03906 1.895 -0.92578 3.1045a15.457 15.457 0 0 1 -10.54493 5.12548Z"
         android:fillColor="#FFFFFF" />
     <path
-        android:pathData="M632.88 160.34A24 24 0 0 1 584.88 160.34A24 24 0 0 1 632.88 160.34Z"
-        android:fillColor="#000000" />
-    <path
-        android:pathData="M516.07 137.64A24 24 0 0 1 468.07 137.64A24 24 0 0 1 516.07 137.64Z"
-        android:fillColor="#000000" />
-    <path
-        android:pathData="M552.85 189.18l-19.63 -3.82c-1.35 -0.26 -2.24 -1.58 -1.98 -2.93l0.57 -2.94c0.26 -1.35 1.58 -2.24 2.93 -1.98l19.63 3.82c1.35 0.26 2.24 1.58 1.98 2.93l-0.57 2.94C555.52 188.55 554.2 189.44 552.85 189.18z"
-        android:fillColor="#000000" />
-    <path
-        android:pathData="M562.89 176.87c0.76 -3.93 -8.43 1.42 -9.76 8.29c-1.53 7.85 5.37 14.29 6.14 10.36c0.76 -3.93 -3.35 -3.71 -2.21 -9.6C558.2 180.03 562.12 180.79 562.89 176.87z"
-        android:fillColor="#000000" />
-    <path
-        android:pathData="M528.53 170.19c0.76 -3.93 7.28 4.47 5.94 11.34c-1.53 7.85 -10.33 11.23 -9.57 7.31c0.76 -3.93 4.5 -2.18 5.64 -8.07C531.69 174.88 527.77 174.12 528.53 170.19z"
+        android:pathData="M483.79431 112.80519h-0.00006c1.25226 0 2.16205 0.32909 2.43359 0.8803 0.2829 0.5742 -0.04162 1.53572 -0.868 2.572a14.96845 14.96845 0 0 1 -10.15344 4.93729c-1.25269 0 -2.16266 -0.32909 -2.4342 -0.8803 -0.2829 -0.5742 0.04162 -1.53572 0.868 -2.572a14.96815 14.96815 0 0 1 10.15411 -4.93729m-0.00067 -1a14.33669 14.33669 0 0 0 -6.0614 1.60663c-4.21112 2.07463 -6.83344 5.36293 -5.85712 7.34463 0.47351 0.96122 1.70618 1.43836 3.33124 1.43836a14.33491 14.33491 0 0 0 6.0614 -1.60663c4.21112 -2.07463 6.83344 -5.36293 5.85712 -7.34463 -0.47351 -0.96122 -1.70618 -1.43848 -3.33124 -1.43836Z"
         android:fillColor="#000000" />
 </vector>
