--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,14 +106,14 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="62dp"
-            android:text="Button"
+            android:text="Fridge"
             android:translationY="120dp" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="98dp"
             android:layout_height="62dp"
-            android:text="Button"
+            android:text="Freezer"
             android:translationX="100dp"
             android:translationY="120dp" />
 
@@ -121,7 +121,7 @@
             android:id="@+id/button3"
             android:layout_width="98dp"
             android:layout_height="62dp"
-            android:text="Button"
+            android:text="Counter"
             android:translationX="200dp"
             android:translationY="120dp" />
     </android.support.v7.widget.CardView>
