--- a/app/src/main/res/layout/my_card_view.xml
+++ b/app/src/main/res/layout/my_card_view.xml
@@ -61,12 +61,13 @@
                 android:textColor="#000"
                 android:textSize="12sp" />
 
-            <ToggleButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="pin"
-                android:textOff="Pin"
-                android:textOn="Unpin" />
+            <ImageView
+                android:id="@+id/pin"
+                android:layout_width="60dp"
+                android:layout_height="30dp"
+                android:layout_weight="0"
+                card_view:srcCompat="@drawable/apple" />
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </ScrollView>
