--- a/app/src/main/res/layout/my_card_view.xml
+++ b/app/src/main/res/layout/my_card_view.xml
@@ -9,8 +9,9 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:layout_height="wrap_content">
+        android:background="#BDE6F7">
 
         <Button
             android:id="@+id/infoButton"
