--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,6 +110,7 @@
         android:id="@+id/quiz_view"
         android:layout_width="300dp"
         android:layout_height="180dp"
+        android:layout_margin="12dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -117,14 +118,14 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="#B5D8F0"
+        android:textColor="@android:color/white"
+        app:cardBackgroundColor="#94FDFDFD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.054"
-        android:textColor="@android:color/white"
-        android:layout_margin="12dp">
+        app:layout_constraintVertical_bias="0.054">
 
         <TextView
             android:id="@+id/textView2"
